[package]
name = "veritynet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
log = "0.4"                                   # Logging facade
env_logger = "0.11"                           # Logging implementation
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization
serde_json = "1.0"                            # JSON support for Serde