[package]
name = "veritynet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
log = "0.4"                                   # Logging facade
env_logger = "0.11"                           # Logging implementation
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization
serde_json = "1.0"                            # JSON support for Serde
# P2P Networking - WebRTC
webrtc = "0.8" # Core WebRTC library (features handled internally or via dependencies)
futures = "0.3"                                   # Async utilities often used with webrtc-rs
rand = "0.8"                                      # For generating random IDs/tokens if needed later
# Note: We might need more specific WebRTC features later (e.g., for data channels)
# WebSocket client for signaling
tokio-tungstenite = { version = "0.25", features = ["native-tls"] } # Use native-tls for simplicity on Windows
url = "2.5"                     # For parsing WebSocket server URLs
futures-util = "0.3"            # Stream utilities often needed with websockets